[package]
name = "cosmic-settings-subscriptions"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
cosmic-dbus-networkmanager = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", optional = true }
num-derive = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
sctk = { git = "https://github.com/smithay/client-toolkit/", package = "smithay-client-toolkit", optional = true }
futures = "0.3.30"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
itertools = "0.14.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
libpulse-binding = { version = "2.29.0", optional = true }
log = "0.4.22"
pipewire = { version = "0.8.0", optional = true }
rustix = { version = "1.0.0", optional = true }
secure-string = { version = "0.3.0", optional = true }
thiserror = "2.0.0"
tokio = { version = "1.39.3", features = ["net", "process", "sync"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
bluez-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
zbus = "5.7.1"
indexmap = { version = "2.10.0", optional = true }
async-fn-stream = "0.2.2"

[features]
default = ["pipewire", "pulse"]
accessibility = ["cosmic-dbus-a11y"]
cosmic_a11y_manager = ["cosmic-protocols", "num-derive", "num-traits", "sctk"]
airplane_mode = ["rustix", "rustix/fs"]
bluetooth = ["dep:bluez-zbus"]
network_manager = ["dep:cosmic-dbus-networkmanager", "dep:secure-string"]
pipewire = ["dep:pipewire"]
pulse = ["libpulse-binding", "rustix", "rustix/pipe"]
upower = ["upower_dbus"]
settings_daemon = []
sound = ["pipewire", "pulse", "dep:indexmap"]

# [patch.'https://github.com/pop-os/dbus-settings-bindings']
# cosmic-dbus-networkmanager = { path = "../dbus-settings-bindings/networkmanager" }
# upower_dbus = { path = "../dbus-settings-bindings/upower" }
